@@ -8,6 +8,10 @@ Bug fixes:
 	* Save rotation of axis title seperately for x and y axis
 	* Don't crash when creating the data spreadsheet for analysis curves (BUG 504662)
 	* Fix crash when aspect is added and all docks in content area are hidden (BUG 504794, 502043)
+	* Fix crash when column or row was added to spreadsheet from toolbar and no column or row was selected (BUG 504839)
+	* Fix issue when the statistics spreadsheet was not shown if the spreadsheet was a child of workbook
+	* Fix issue which caused the context menu of an aspect to not be shown after being reparented
+	* Handle Windows logical font "MS Shell Dlg 2"
 
 
 -----2.12.0 (25.04.2025) -----
